UI and Code Improvements
Changed image on AddPointActivity
Removed height from volumes on ResultsActivity
Code Inspection

--- a/app/src/main/res/layout/list_row_volumes.xml
+++ b/app/src/main/res/layout/list_row_volumes.xml
@@ -15,9 +15,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
@@ -35,9 +32,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -48,7 +42,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
-                    android:layout_weight="1.5"
+                    android:layout_weight="2"
                     android:gravity="center"
                     android:text="volume 22,41 cm³"
                     android:textSize="20sp"
@@ -57,31 +51,17 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2">
+                    android:layout_weight="1.5">
 
                     <TextView
                         android:id="@+id/base"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="5dp"
-                        android:layout_weight="1"
                         android:gravity="center"
                         android:text="base 20,3 cm²"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/height"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="height 3 cm"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
