--- a/app/src/main/res/layout/activity_add_point.xml
+++ b/app/src/main/res/layout/activity_add_point.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal|top"
     android:orientation="vertical"
     tools:context=".activities.AddPointActivity"
-    android:paddingBottom="70dp">
+    android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/title"
@@ -16,15 +16,20 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="22sp"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/black"/>
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_margin="20dp"
-        android:padding="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="2"
         android:src="@drawable/point"
         tools:ignore="ContentDescription" />
