--- a/app/src/main/res/layout/fragment_tutorial_height.xml
+++ b/app/src/main/res/layout/fragment_tutorial_height.xml
@@ -12,65 +12,32 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="The information of this step is specific for the chosen type of height entered."/>
+        android:lineSpacingMultiplier="1.5"
+        android:singleLine="false"
+        android:text="Firstly, let's consider how to position the device during the measurement." />
 
     <TextView
-        android:id="@+id/height_tv"
+        android:id="@+id/heighttype_tv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="To do the measurement, you will have to keep the device's camera at the height of your chest"/>
+        android:lineSpacingMultiplier="1.5"
+        android:layout_marginTop="10sp"
+        android:layout_marginBottom="10sp"
+        android:singleLine="false"
+        android:text="@string/tutorial_manual_height" />
 
-
-    <LinearLayout
-        android:id="@+id/layout_info_height"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_info_primary_56dp"
-            android:layout_marginEnd="20dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:text="This method can lead to unwanted approximations, so it is recommended to enter the specific height whenever is known"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_warning_red_512dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textColor="@color/dark_red"
-            android:text="Once the first point has been measured, the device position CANNOT change, so consider one conformable for you"/>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:lineSpacingMultiplier="1.5"
+        android:singleLine="false"
+        android:text="Before starting the measure of the points, locate yourself and the device on \
+a comfortable position, where you can see the screen and aim at the points correctly. \nTo \
+aim at the points, you can only rotate the device keeping its camera steady, as moving it \
+from its initial position will highly worsen the results." />
 
 </LinearLayout>
