--- a/app/src/main/res/layout/fragment_tutorial_pointtypes.xml
+++ b/app/src/main/res/layout/fragment_tutorial_pointtypes.xml
@@ -13,21 +13,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:textSize="16sp"
-        android:text="When measuring points, there are two types that have to be considered: Based Point and Non-Based Point"/>
+        android:lineSpacingMultiplier="1.5"
+        android:singleLine="false"
+        android:text="Before considering how to measure points, some simple concepts have to be \
+explained. \nTo be able to measure any point in space, you will firstly need to measure its 'Base Point. \
+That is to say, a point in the same place but on the ground. A comparison can be seen on the picture."/>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:layout_margin="10dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:textSize="16sp"
-        android:text="To measure a point, click on the Add button on the top-right corner of the measuring screen, select the corresponding type and follow the specific instructions of the next slide"/>
+        android:lineSpacingMultiplier="1.5"
+        android:singleLine="false"
+        android:text="Note that if the desired point is on the ground, no previous point measurement is necessary."/>
 
 </LinearLayout>
